# UniquePtr-implementation

./: .gitignore  CMakeLists.txt  README.md
example/: example_MyUniquePtr.cpp
include/: MyUniquePtr.h
